src/tests/fixtures/user_error/GqlTagDoesNotExist.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlFiled */

-----------------
OUTPUT
-----------------
src/tests/fixtures/user_error/GqlTagDoesNotExist.invalid.ts:1:6 - error: `@gqlFiled` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`, `@gqlDirective`, `@gqlAnnotate`, `@gqlQueryField`, `@gqlMutationField`, `@gqlSubscriptionField`.

1 /** @gqlFiled */
       ~~~~~~~~
